--- a/style.css
+++ b/style.css
@@ -450,8 +450,74 @@ footer h1{
 
 }
 
+
 @media only screen and (max-width: 600px) {
+    #intro-sec{
+        height: fit-content;
+        padding:0px;
+    }
+    .welcome-page{
+        display:flex;
+        flex-direction:column;
+    }
+   
+    .greeting{
+        font-size: 60px;
+    }
+    
+
+    #about{
+        display: flex;
+        margin: 0;
+        
+    }
+    .about-page{
+        
+        
+    }
+    
+    .skill-page{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .card-page > .card {
-        width: 70%;
+        justify-content: center;
+        width: 75%;
+      }
+    
+}
+
+@media only screen and (max-width: 300px) {
+    .welcome-page{
+        display:flex;
+        flex-direction:column;
+    }
+   
+    .greeting{
+        font-size: 60px;
+    }
+   
+    .about-page{
+       
+    }
+
+    #skill{
+        display:flex;
+        position:absolute;
+        margin-top:100px;
+        justify-content: center;
+        
+    }
+    
+    .skill-page{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid;
+    }
+    .card-page > .card {
+        justify-content: center;
+        width: 75%;
       }
 }
